Добавляет подсветку активного пункта списка

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="myApp">
 <head>
   <meta charset="utf-8">
+  <title>App</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
       </div>
       <input class="filters__text-input" type="text" ng-model="name" placeholder="Text filter">
     </div>
-    <ul class="items__list">
+    <ul class="items__list" ng-click="mainCtrl.clickLi($event)">
       <li class="items__item" ng-repeat="item in ctrl.items | orderBy:ctrl.sortparam | filter:{name}" ng-click="mainCtrl.clickItem(item)">
         <b class="items__item-name">{{item.name}}</b>
         <div class="items__item-flags">
@@ -26,7 +27,7 @@
       </li>
     </ul>
   </div>
-  <div class="info-box">
+  <div class="info-box  info-box--{{mainCtrl.class}}">
     <h2 class="info-box__title">{{mainCtrl.info}}</h2>
     <div class="info-box__name">
       <p class="info-box__text">{{mainCtrl.name}}</p>
@@ -51,9 +52,12 @@
         <label class="filters__flag  filters__flag--{{ flag }}" for="filter-flag--{{ flag }}">{{ flag }}</label>
       </div>
     </div>
-    <ul class="items__list">
+    <ul class="items__list" id="items-list" ng-click="mainCtrl.clickLi($event)">
       <li class="items__item" ng-repeat="item in (ctrl.items | filter:ctrl.filterByFlags) as filteredItems" ng-click="mainCtrl.clickItem(item)">
-        <b class="items__item-name">{{item.name}}</b>
+        <b class="items__item-name">
+          <!--ng-class="mainCtrl.questClass"-->
+          <!--ng-click="mainCtrl.changeClass($event)"-->
+          {{item.name}}</b>
         <div class="items__item-flags">
           <div class="{{item.flags[0]}}">{{item.flags[0]}}</div>
           <div class="{{item.flags[1]}}">{{item.flags[1]}}</div>
