Подключение списка элементов отдельным файлом

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
   </div>
 </div>
 <script src="js/lib/angular.min.js"></script>
+<script src="js/controllers/itemsList.js"></script>
 <script src="js/controllers/ItemCtrl.js"></script>
 <script src="js/controllers/FlagsCtrl.js"></script>
 <script src="js/controllers/ClickCtrl.js"></script>
