--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html ng-app="myApp">
+<html ng-app="itemsFlagsApp">
 <head>
   <meta charset="utf-8">
-  <title>App</title>
+  <title>Items-Flags App</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
